# aegir-genie

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  REUSE.toml  activate.sh  pixi.toml
.github/workflows/: pixi-build.yml
docs/: validation.md
doxygen/: Doxyfile
scripts/: compare_genie_samples.py  make_flux_ntuple.py  shuffle_gsimple.C
src/: genie_config.hpp  genie_driver_setup.cpp  genie_driver_setup.hpp  genie_source.cpp  gevgen_ship.cpp  mc_particle_source.hpp  philox_rng.hpp  ship_flux_driver.cpp  ship_flux_driver.hpp  ship_geom_analyzer.cpp  ship_geom_analyzer.hpp
tests/: flux_driver_test.cpp  geom_analyzer_test.cpp  spline_tune_test.cpp
workflows/: genie_ship_full.jsonnet  genie_st.jsonnet
